tests/analyzer/errors/self_outside_struct.rv
fn noooo(self, a: int) {}

fn main() {}
